# csvgrouper

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/csvgrouper/: __init__.py  grouper.py
test_data/: hardness_test_metals.csv  lab_environment_monitoring.csv  reaction_kinetics_hydrogenation.csv  reaction_kinetics_oxidation.csv  tensile_test_aluminum.csv  tensile_test_steel.csv  uv_vis_spectroscopy.csv  weather_station_alpha.csv  weather_station_beta.csv  weather_station_gamma_minimal.csv
tests/: test_integration.py  test_unit.py
