[project]
name = "csvgrouper"
version = "0.1.0"
description = "Group CSV files by field structure similarity"
readme = "README.md"
authors = [
    { name = "Andy Beatty", email = "apbeatty@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
